# Cities-CRUD

./: .env  Cargo.toml  README.md
migrations/2020-03-22-112846_create_cities/: down.sql  up.sql
src/: main.rs  schema.rs
src/cities/: handler.rs  model.rs  repository.rs  router.rs
